cambiato #fff in red

--- a/app/series/core/Core.css
+++ b/app/series/core/Core.css
@@ -1,7 +1,7 @@
 #accordion-toggle{
 	display: none;
 	position: absolute;
-	color: #fff;
+	color: red;
 	font-size: 28px;
 	margin-top: 9px;
 	left: 9px;
